# DearEngine

./: .gitignore  .gitmodules  C++ 指针简记.md  CMakeLists.txt  CONTRIBUTING.md  README.md  imgui.ini  main.cpp  场景视口SDL_GPU渲染学习指导.md
assets/config/: imgui_default.ini
cmake/: compile_all_shaders.cmake  compile_shader.cmake
docs/: OpenGL切换学习指导.md  rendering_guide.md  反射与序列化.md  反射与序列化系统设计指南.md  反射与序列化系统设计指南（编译期版本）.md  场景视口OpenGL渲染学习指导.md  场景视口渲染学习指导.md  栈与堆.md
example/JoltPhysics/: HelloWorld_annotated.cpp
example/cpp-training-season1-main/reflection/src/: main.cpp  reflect.cpp  reflect.hpp
example/example_opengl_engine_code/: example.cpp
example/example_sdl3_opengl3/: main.cpp
example_imgui_sdl3_sdlgpu3/: main.cpp
example_sdl3_gpu_triangle/: CMakeLists.txt  main.cpp
example_sdl3_gpu_triangle/SDL/: .gitignore  CMakeLists.txt
example_sdl3_gpu_triangle/SDL/android-project/app/jni/src/: CMakeLists.txt
example_sdl3_gpu_triangle/SDL/cmake/: GetGitRevisionDescription.cmake  macros.cmake  sdlchecks.cmake  sdlcommands.cmake  sdlplatform.cmake
example_sdl3_gpu_triangle/SDL/cmake/android/: SdlAndroidFunctions.cmake
example_sdl3_gpu_triangle/SDL/cmake/test/: CMakeLists.txt
example_sdl3_gpu_triangle/SDL/examples/: CMakeLists.txt
example_sdl3_gpu_triangle/SDL/test/: CMakeLists.txt
example_sdl3_gpu_triangle/cmake/: compile_shader.cmake
include/JoltPhysics/HelloWorld/: HelloWorld.cpp
include/glad/: glad.c  glad.h
include/imgui-docking/examples/example_android_opengl3/: CMakeLists.txt
src/: Appstate.h  CMakeLists.txt  State.h  main.cpp
src/application/: Application.cpp  Application.h
src/application/assets/: TestPhysics.scene  Untitled.scene
src/engine/: Engine.cpp  Engine.h  EngineEditor.cpp  EngineEditor.h
src/engine/assets/: Untitled.scene  test_transform.yaml  transform.yaml  transform_test.yaml
src/engine/assets/config/: imgui_default.ini
src/engine/assets/shader/: default_frag.msl  default_frag.spv  default_scene_frag.frag  default_scene_vert.vert  default_vert.msl  default_vert.spv  default_vert.vert
src/engine/core/: DObject.h  Entity.cpp  Entity.h  IComponent.h  IEntity.h  IScene.h  Log.cpp  Log.h  Scene.cpp  Scene.h
src/engine/core/component/: CameraComponent.cpp  CameraComponent.h  ColliderComponent.cpp  ColliderComponent.h  DirLightComponent.cpp  DirLightComponent.h  IComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h  TestComponent.cpp  TestComponent.h  TestCubeComponent.cpp  TestCubeComponent.h  TransformComponent.cpp  TransformComponent.h  TransformSpace.h
src/engine/core/physics/: Physics.cpp  Physics.h  PhysicsContactListener.cpp  PhysicsContactListener.h
src/engine/core/reflection/: MemberVariable.h  Reflect.h  ReflectInit.h  Registry.cpp
src/engine/core/render_context/: ICamera.cpp  ICamera.h  IDirLight.h  RenderContext.h
src/engine/core/serialization/: ReflectYamlBuiltins.h  SceneSerialization.h
src/engine/editor/: EngineEditor.cpp  EngineEditor.h
src/engine/editor/window/: AssetManagerSubWindow.cpp  AssetManagerSubWindow.h  ConsoleSubWindow.cpp  ConsoleSubWindow.h  EntityComponentSubWindow.cpp  EntityComponentSubWindow.h  IEditorSubWindow.h  SceneTreeSubWindow.cpp  SceneTreeSubWindow.h  SceneViewportSubWindow.cpp  SceneViewportSubWindow.h
src/engine/reflection/: DeReflectionYaml.h  MemberFunction.h  MemberVariable.h  Reflect.h  ReflectInit.h  ReflectionMacros.h  Registry.cpp  Registry.h  TypeDescriptor.h  TypeDescriptorBuilder.cpp  TypeDescriptorBuilder.h  TypeInfo.h  TypeRegistry.h  YamlConverters.h
src/engine/serialization/: ReflectYaml.cpp  ReflectYaml.h  ReflectYamlBuiltins.h  SceneSerialization.cpp  SceneSerialization.h
src/engine/util/: AboutGPU.cpp  AboutGPU.h  GLUtil.h  Path.h
src/engine/window/: AssetManagerWindow.cpp  AssetManagerWindow.h  ConsoleWindow.cpp  ConsoleWindow.h  EntityComponentWindow.cpp  EntityComponentWindow.h  GameobjectComponentWindow.cpp  IEngineWindow.h  SceneTreeWindow.cpp  SceneTreeWindow.h  SceneViewportWindow.cpp  SceneViewportWindow.h
src/window/: ConsoleWindow.cpp  GameobjectComponentWindow.h  SceneTreeWindow.cpp  SceneViewportWindow.cpp
submodule/: README.md
